@@ -1,4 +1,10 @@
 creating ChangeLog
+2002-10-26 David Malcolm
+
+	* xmledit.c
+
+	Ported cut/copy/paste within editor to libxml2
+	
 2002-10-24 David Malcolm
 
 	*  cong-test-view.c, global.h, tree.c, xmldata.c, xmledit.c
